제어문/Yena Jung/3장 연습문제
>>> """1번"""
'1번'
>>> shirt
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'shirt' is not defined
>>>
>>> 2qjs
  File "<stdin>", line 1
    2qjs
    ^
SyntaxError: invalid decimal literal
>>> 2번
  File "<stdin>", line 1
    2번
    ^
SyntaxError: invalid decimal literal
>>> number=1
>>> while number//3==0:
...     number=number+1
...     print(number+number)
...     if number==1000:pass
...
4
6
>>>
>>> """3번"""
'3번'
>>> while
  File "<stdin>", line 1
    while
          ^
SyntaxError: invalid syntax
>>>
>>> """4번"""
'4번'
>>> for i in range(1,101):
...     print(i)
...
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
>>>
>>> """5번"""
'5번'
>>> marks=[70,60,55,75,95,90,80,80,85,100]
>>> result=[]
>>> for num in marks:
...     result.append(num+num)
...
>>> print(result)
[140, 120, 110, 150, 190, 180, 160, 160, 170, 200]
>>>
>>>
>>> """6번"""
'6번'
>>> numbers=[1,2,3,4,5]
>>> result=[]
>>>
>>>
>>>
KeyboardInterrupt
>>> numbers=[1,2,3,4,5]
>>> result=[num*2 for num in numbers]
>>>     if num%2==1
  File "<stdin>", line 1
    if num%2==1
IndentationError: unexpected indent
>>> numbers=[1,2,3,4,5]
>>> result=[num*2 for num in numbers if num%2==1]
>>> print(result)
[2, 6, 10]
